# CPU-Ray-Tracing

./: .gitignore  CMakeLists.txt  README.md
shaders/: basic.frag  basic.vert  ray.frag  rayTracer.metal  rayTracing.comp
src/: Camera.h  MetalRenderer.h  MetalRenderer.mm  OLD main CPU.cpp  Shader.h  Shared.h  main.cpp  main.mm
